Closed
Bug 1694822
Opened 5 years ago
Closed 5 years ago
Crash in [@ mozilla::layers::DataTextureSourceD3D11::DataTextureSourceD3D11]
Categories
(Core :: Graphics: WebRender, defect)
Tracking
()
RESOLVED
FIXED
88 Branch
| Tracking | Status | |
|---|---|---|
| firefox-esr78 | --- | unaffected |
| firefox86 | --- | unaffected |
| firefox87 | --- | unaffected |
| firefox88 | --- | fixed |
People
(Reporter: aryx, Assigned: sotaro)
References
(Blocks 1 open bug, Regression)
Details
(Keywords: crash, regression)
Crash Data
Attachments
(1 file)
There are new crashes with this signature after a short break when bug 1690491 fixed the previous ones. New affected versions based on crash reports are 88.0a1 20210223230332 and 20210224100119 so far.
Sotaro, could bug 1677459 trigger these?
Maybe Fission related. (DOMFissionEnabled=1)
Crash report: https://crash-stats.mozilla.org/report/index/f4f5722d-6abc-4b6b-baf6-e519d0210224
Reason: EXCEPTION_ACCESS_VIOLATION_READ
Top 10 frames of crashing thread:
0 xul.dll mozilla::layers::DataTextureSourceD3D11::DataTextureSourceD3D11 gfx/layers/d3d11/TextureD3D11.cpp:200
1 xul.dll mozilla::wr::RenderCompositorD3D11SWGL::DoCreateTile gfx/webrender_bindings/RenderCompositorD3D11SWGL.cpp:407
2 xul.dll mozilla::wr::RenderCompositorLayersSWGL::CreateTile gfx/webrender_bindings/RenderCompositorLayersSWGL.cpp:217
3 xul.dll webrender::compositor::sw_compositor::{{impl}}::create_tile gfx/wr/webrender/src/compositor/sw_compositor.rs:1361
4 xul.dll webrender::renderer::Renderer::update_native_surfaces gfx/wr/webrender/src/renderer/mod.rs:4291
5 xul.dll webrender::renderer::Renderer::render_impl gfx/wr/webrender/src/renderer/mod.rs:2111
6 xul.dll webrender::renderer::Renderer::render gfx/wr/webrender/src/renderer/mod.rs:1886
7 xul.dll webrender_bindings::bindings::wr_renderer_render gfx/webrender_bindings/src/bindings.rs:637
8 xul.dll mozilla::wr::RenderThread::UpdateAndRender gfx/webrender_bindings/RenderThread.cpp:481
9 xul.dll mozilla::wr::RenderThread::HandleFrameOneDoc gfx/webrender_bindings/RenderThread.cpp:337
Flags: needinfo?(sotaro.ikeda.g)
| Reporter | ||
Updated•5 years ago
|
Blocks: sw-wr-stability
| Assignee | ||
Updated•5 years ago
|
Assignee: nobody → sotaro.ikeda.g
Flags: needinfo?(sotaro.ikeda.g)
| Assignee | ||
Comment 1•5 years ago
|
||
Sorry, bug 1677459 seemed to cause the regression.
Updated•5 years ago
|
Has Regression Range: --- → yes
| Assignee | ||
Comment 2•5 years ago
|
||
Pushed by sikeda.birchill@mozilla.com:
https://hg.mozilla.org/integration/autoland/rev/155e82611fed
Fix return of RenderCompositorD3D11SWGL::DoCreateTile() r=mattwoodrow
Comment 4•5 years ago
|
||
| bugherder | ||
Status: NEW → RESOLVED
Closed: 5 years ago
Resolution: --- → FIXED
Target Milestone: --- → 88 Branch
You need to log in
before you can comment on or make changes to this bug.
Description
•