Bug 1694822 - Fix return of RenderCompositorD3D11SWGL::DoCreateTile() r=mattwoodrow

"return" was removed by mistake.

Differential Revision: https://phabricator.services.mozilla.com/D106360